--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mocha": "^1.18.2",
     "less": "^1.5",
     "webpack": "^1.1.8",
-    "raw-loader": "^0.5.1"
+    "raw-loader": "^0.5.1",
+    "enhanced-require": "^0.5.0-beta6"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,8 @@
       "type": "MIT",
       "url": "http://www.opensource.org/licenses/mit-license.php"
     }
-  ]
+  ],
+  "dependencies": {
+    "loader-utils": "^0.2.2"
+  }
 }
