--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "node node_modules/mocha/bin/mocha -R spec"
   },
   "peerDependencies": {
-    "less": "^1.5"
+    "less": "^1.5 || ^2.0.0"
   },
   "devDependencies": {
     "should": "^3.3.1",
