--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "enhanced-require": "^0.5.0-beta6",
+    "less": "^2.1.1"
     "mocha": "^2.0.1",
     "raw-loader": "^0.5.1",
     "should": "^4.4.1",
