--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     }
   ],
   "dependencies": {
-    "loader-utils": "^0.2.5"
+    "convert-source-map": "^0.4.1",
+    "loader-utils": "^0.2.5",
+    "path": "^0.11.14"
   }
 }
