Use dependencies instead of peerDependencies.
npm@3 remove `peerDependencies` support now.

--- a/package.json
+++ b/package.json
@@ -7,14 +7,10 @@
     "test": "mocha -R spec",
     "test-source-map": "webpack --config test/sourceMap/webpack.config.js && open ./test/sourceMap/index.html"
   },
-  "peerDependencies": {
-    "less": "^2.3.1"
-  },
   "devDependencies": {
     "css-loader": "^0.9.1",
     "enhanced-require": "^0.5.0-beta6",
     "extract-text-webpack-plugin": "^0.5.0",
-    "less": "^2.3.1",
     "mocha": "^2.0.1",
     "raw-loader": "^0.5.1",
     "should": "^5.2.0",
@@ -31,6 +27,7 @@
     }
   ],
   "dependencies": {
-    "loader-utils": "^0.2.5"
+    "loader-utils": "^0.2.5",
+    "less": "^2.3.1"
   }
 }
