--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     }
   ],
   "dependencies": {
-    "loader-utils": "^0.2.5"
+    "loader-utils": "^0.2.5",
+    "object-assign": "^4.1.0"
   }
 }
