ci(Travis): drop before script install

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ matrix:
   include:
     - os: linux
       node_js: '6'
-      env: WEBPACK_VERSION="2.2.0" JOB_PART=test
+      env: JOB_PART=test
     - os: linux
       node_js: '4.3'
-      env: WEBPACK_VERSION="2.2.0" JOB_PART=test
+      env: JOB_PART=test
     - os: linux
       node_js: '7'
-      env: WEBPACK_VERSION="2.2.0" JOB_PART=test
+      env: JOB_PART=test
     # - os: linux
     #   node_js: '7'
     #   env: WEBPACK_VERSION="2.2.0" BITHOUND_CHECK=true JOB_PART=lint
@@ -26,7 +26,7 @@ before_install:
   - nvm --version
   - node --version
 before_script:
-  - if [ "$WEBPACK_VERSION" ]; then yarn add webpack@^$WEBPACK_VERSION; fi
+  # - if [ "$WEBPACK_VERSION" ]; then yarn add webpack@^$WEBPACK_VERSION; fi
   # - if [ "$BITHOUND_CHECK" ]; then npm install -g bithound; bithound check git@github.com:$TRAVIS_REPO_SLUG.git; fi
 script:
   - yarn run travis:$JOB_PART
