ci(Travis): add note about defualts upgrade for test suite

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,5 @@ script:
   - yarn run travis:$JOB_PART
 # after_success:
 #   - bash <(curl -s https://codecov.io/bash)
+
+# TODO: This test suite will throw schema errors with webpack 2.2.x installed. Address this on defaults upgrade to Jest
