--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "description": "less loader module for webpack",
   "scripts": {
     "test": "npm run travis:test",
-    "travis:test": "node --no-deprecation node_modules/.bin/_mocha -R spec",
-    "test-source-map": "webpack --config test/sourceMap/webpack.config.js && open ./test/sourceMap/index.html"
+    "travis:test": "mocha -R spec"
+  },
+  "engines": {
+    "node": ">=4.0.0"
   },
   "peerDependencies": {
     "less": "^2.3.1"
   },
   "devDependencies": {
-    "css-loader": "^0.23.1",
-    "enhanced-require": "^0.5.0-beta6",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "css-loader": "^0.26.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "less": "^2.6.1",
-    "mocha": "^2.4.5",
+    "mocha": "^3.2.0",
     "raw-loader": "^0.5.1",
-    "should": "^8.3.0",
-    "webpack": "^1.12.14"
+    "should": "^11.2.0",
+    "webpack": "^2.2.1"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     }
   ],
   "dependencies": {
+    "clone-deep": "^0.2.4",
     "loader-utils": "^1.0.2"
   }
 }
