--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.2.3",
   "author": "Johannes Ewald @jhnns",
   "description": "Less loader for webpack. Compiles Less to CSS.",
+  "main": "lib/loader.js",
   "scripts": {
     "test": "mocha -R spec",
     "travis:test": "npm test",
