--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,17 @@
-# This file is for unifying the coding style for different editors and IDEs.
-# More information at http://EditorConfig.org
-
-# No .editorconfig files above the root directory
+# editorconfig.org
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
 charset = utf-8
-trim_trailing_whitespace = true
+indent_style = space
+indent_size = 2
+end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 [package.json]
 indent_size = 2
+
+[.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
