--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,16 @@ npm-debug.log
 coverage
 .idea
 .nyc_output
+
+npm-debug.log*
+yarn-debug.log*
+.eslintcache
+/coverage
+/dist
+/local
+/reports
+.DS_Store
+Thumbs.db
+.vscode
+*.sublime-project
+*.sublime-workspace
