--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,12 @@
     ]
   ],
   "plugins": [
-    ["transform-object-rest-spread", { "useBuiltIns": true }]
+    [
+      "transform-object-rest-spread",
+      {
+        "useBuiltIns": true
+      }
+    ]
   ],
   "env": {
     "test": {
