Add pretest script to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_script:
       yarn add webpack@^$WEBPACK_VERSION
     fi
 script:
+  - 'yarn run pretest'
   - 'yarn run travis:$JOB_PART'
 after_success:
   - 'bash <(curl -s https://codecov.io/bash)'
