--- a/.babelrc
+++ b/.babelrc
@@ -27,6 +27,9 @@
     "test": {
       "presets": [
         "env"
+      ],
+      "plugins": [
+        "transform-object-rest-spread"
       ]
     }
   }
