chore(dependencies): Update peer dependencies
BREAKING CHANGE: Require webpack 2 as peer dependency

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "pify": "^2.3.0"
   },
   "peerDependencies": {
-    "less": "^2.3.1"
+    "less": "^2.3.1",
+    "webpack": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -49,16 +50,15 @@
     "eslint": "^3.17.1",
     "eslint-config-webpack": "^1.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsdoc": "^2.4.0",
     "inspect-loader": "^1.0.0",
     "jest": "^19.0.2",
-    "less": "^2.6.1",
+    "less": "^2.3.1",
     "lint-staged": "^3.4.0",
     "nodemon": "^1.11.0",
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack": "^2.2.1",
+    "webpack": "^2.2.0",
     "webpack-defaults": "^0.4.1"
   },
   "repository": {
