chore: Update to webpack-defaults 1.0.1

--- a/.babelrc
+++ b/.babelrc
@@ -3,10 +3,9 @@
     [
       "env",
       {
-        "modules": false,
         "useBuiltIns": true,
         "targets": {
-          "node": 4.3
+          "node": "4.3"
         },
         "exclude": [
           "transform-async-to-generator",
