--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ environment:
 
 install:
   - ps: Install-Product node $env:nodejs_version x64
-  - npm install
+  - yarn install
 
 build: off
 
@@ -26,4 +26,4 @@ matrix:
 test_script:
   - node --version
   - npm --version
-  - cmd: npm run appveyor:%job_part%
+  - cmd: yarn run appveyor:%job_part%
