--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,10 @@
 init:
   - git config --global core.autocrlf input
 
+branches:
+  only:
+    - master
+
 # what combinations to test
 environment:
   matrix:
