chore(package): Update to webpack-defaults 1.0.1 (#202)
* chore: Update to webpack-defaults 1.0.1

* ci(appveyor): Use yarn in appveyor

 - Works around npm 2.x issue with Jest 20 related to regeneratorRuntime

* ci(appveyor): Only build once in PRs

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,10 @@
 init:
   - git config --global core.autocrlf input
 
+branches:
+  only:
+    - master
+
 # what combinations to test
 environment:
   matrix:
@@ -16,7 +20,7 @@ environment:
 
 install:
   - ps: Install-Product node $env:nodejs_version x64
-  - npm install
+  - yarn install
 
 build: off
 
@@ -26,4 +30,4 @@ matrix:
 test_script:
   - node --version
   - npm --version
-  - cmd: npm run appveyor:%job_part%
+  - cmd: yarn run appveyor:%job_part%
