--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "peerDependencies": {
     "less": "^2.3.1",
-    "webpack": "^2.2.0"
+    "webpack": "^2.2.0 || ^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
