--- a/package.json
+++ b/package.json
@@ -3,29 +3,28 @@
   "version": "4.0.4",
   "author": "Johannes Ewald @jhnns",
   "description": "Less loader for webpack. Compiles Less to CSS.",
-  "main": "dist/index.js",
+  "main": "dist/cjs.js",
   "scripts": {
     "create-spec": "babel-node test/helpers/createSpec.js",
     "pretest": "npm run create-spec",
     "test": "jest",
     "posttest": "npm run lint",
-    "travis:test": "yarn run test",
-    "appveyor:test": "npm test",
+    "travis:test": "npm run test -- --runInBand",
+    "appveyor:test": "npm run test",
     "lint": "eslint --cache src test",
     "webpack-defaults": "webpack-defaults",
-    "start": "yarn run build -- -w",
+    "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
-    "clean:dist": "del-cli dist",
     "lint-staged": "lint-staged",
-    "prebuild": "yarn run clean",
-    "prepublish": "yarn run build",
-    "release": "yarn run standard-version",
+    "prebuild": "npm run clean",
+    "prepublish": "npm run build",
+    "release": "standard-version",
     "security": "nsp check",
-    "serve:dev": "nodemon $2 --exec babel-node",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:coverage": "yarn run test:coverage",
-    "travis:lint": "yarn run lint && yarn run security",
+    "pretravis:coverage": "npm run pretest",
+    "travis:coverage": "npm run test:coverage -- --runInBand",
+    "travis:lint": "npm run lint && npm run security",
     "clean": "del-cli dist"
   },
   "engines": {
@@ -38,7 +37,7 @@
   },
   "peerDependencies": {
     "less": "^2.3.1",
-    "webpack": "^2.2.0"
+    "webpack": "^2.0.0 || ^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -59,7 +58,7 @@
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack": "^2.3.2",
+    "webpack": "latest",
     "webpack-defaults": "^1.0.1"
   },
   "repository": {
