--- a/package.json
+++ b/package.json
@@ -27,17 +27,10 @@
     "travis:lint": "npm run lint && npm run security",
     "clean": "del-cli dist"
   },
-  "engines": {
-    "node": ">= 4.3 < 5.0.0 || >= 5.10"
-  },
   "dependencies": {
     "clone": "^2.1.1",
     "loader-utils": "^1.1.0",
     "pify": "^3.0.0"
-  },
-  "peerDependencies": {
-    "less": "^2.3.1",
-    "webpack": "^2.0.0 || ^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -60,6 +53,13 @@
     "standard-version": "^4.0.0",
     "webpack": "latest",
     "webpack-defaults": "^1.6.0"
+  },
+  "engines": {
+    "node": ">= 6 || >= 8"
+  },
+  "peerDependencies": {
+    "less": "^2.3.1",
+    "webpack": "^3.0.0 || ^4.0.0-alpha.0 || ^4.0.0"
   },
   "repository": {
     "type": "git",
