--- a/package.json
+++ b/package.json
@@ -3,74 +3,81 @@
   "version": "4.0.5",
   "author": "Johannes Ewald @jhnns",
   "description": "Less loader for webpack. Compiles Less to CSS.",
+  "license": "MIT",
   "main": "dist/cjs.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "create-spec": "babel-node test/helpers/createSpec.js",
-    "pretest": "npm run create-spec",
-    "test": "jest",
-    "posttest": "npm run lint",
-    "travis:test": "npm run test -- --runInBand",
-    "appveyor:test": "npm run test",
-    "lint": "eslint --cache src test",
-    "webpack-defaults": "webpack-defaults",
     "start": "npm run build -- -w",
-    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
+    "clean": "del-cli dist",
+    "commitlint": "commitlint",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "create-spec": "babel-node test/helpers/createSpec.js",
+    "lint": "eslint --cache src test",
+    "ci:lint:commits": "commitlint --from=${CIRCLE_BRANCH} --to=${CIRCLE_SHA1}",
     "lint-staged": "lint-staged",
     "prebuild": "npm run clean",
     "prepublish": "npm run build",
+    "pretest": "npm run create-spec",
     "release": "standard-version",
+    "release:ci": "conventional-github-releaser -p angular",
+    "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
     "security": "nsp check",
+    "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "pretravis:coverage": "npm run pretest",
-    "travis:coverage": "npm run test:coverage -- --runInBand",
-    "travis:lint": "npm run lint && npm run security",
-    "clean": "del-cli dist"
+    "test:coverage": "npm run test -- --coverage",
+    "ci:lint": "npm run lint && npm run security",
+    "ci:test": "npm run test -- --runInBand",
+    "ci:coverage": "npm run test:coverage -- --runInBand",
+    "defaults": "webpack-defaults"
   },
   "dependencies": {
     "clone": "^2.1.1",
     "loader-utils": "^1.1.0",
-    "pify": "^3.0.0"
+    "pify": "^3.0.0",
+    "schema-utils": "^0.4.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-jest": "^21.2.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "cross-env": "^3.2.4",
-    "del-cli": "^0.2.1",
-    "eslint": "^3.18.0",
-    "eslint-config-webpack": "^1.2.1",
-    "eslint-plugin-import": "^2.2.0",
+    "@commitlint/cli": "^5.2.5",
+    "@commitlint/config-angular": "^5.1.1",
+    "@webpack-contrib/eslint-config-webpack": "^2.0.2",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^22.0.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "conventional-github-releaser": "^2.0.0",
+    "cross-env": "^5.1.1",
+    "del": "^3.0.0",
+    "del-cli": "^1.1.0",
+    "eslint": "^4.13.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.4.0",
+    "husky": "^0.14.3",
     "inspect-loader": "^1.0.0",
-    "jest": "^21.2.1",
+    "jest": "^22.0.3",
     "less": "^2.3.1",
-    "lint-staged": "^3.4.0",
-    "nodemon": "^1.11.0",
-    "nsp": "^2.6.3",
+    "lint-staged": "^6.0.0",
+    "memory-fs": "^0.4.1",
+    "nsp": "^3.1.0",
     "pre-commit": "^1.2.2",
-    "standard-version": "^4.0.0",
-    "webpack": "latest",
-    "webpack-defaults": "^1.6.0"
+    "prettier": "^1.9.2",
+    "standard-version": "^4.2.0",
+    "webpack": "^3.10.0",
+    "webpack-defaults": "^2.0.0-rc.3"
   },
   "engines": {
     "node": ">= 6.9.0 || >= 8.9.0"
   },
   "peerDependencies": {
     "less": "^2.3.1",
-    "webpack": "^3.0.0 || ^4.0.0-alpha.0 || ^4.0.0"
+    "webpack": "^3.0.0 || ^4.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/webpack-contrib/less-loader.git"
-  },
-  "license": "MIT",
-  "files": [
-    "README.md",
-    "LICENSE",
-    "dist"
-  ],
+  "homepage": "https://github.com/webpack-contrib/less-loader",
+  "repository": "https://github.com/webpack-contrib/less-loader",
+  "bugs": "https://github.com/webpack-contrib/less-loader/issues",
   "pre-commit": "lint-staged",
   "lint-staged": {
     "*.js": [
