--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "pify": "^3.0.0"
   },
   "peerDependencies": {
-    "less": "^2.3.1",
+    "less": "^2.3.1 || ^3.0.0",
     "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
@@ -56,13 +56,13 @@
     "eslint-plugin-import": "^2.2.0",
     "inspect-loader": "^1.0.0",
     "jest": "^21.2.1",
-    "less": "^2.3.1",
+    "less": "^3.0.1",
     "lint-staged": "^3.4.0",
     "nodemon": "^1.11.0",
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack": "latest",
+    "webpack": "^3.0.0",
     "webpack-defaults": "^1.6.0"
   },
   "repository": "https://github.com/webpack-contrib/less-loader.git",
