--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "less-loader",
-  "version": "4.0.6",
+  "version": "4.1.0",
   "author": "Johannes Ewald @jhnns",
   "description": "Less loader for webpack. Compiles Less to CSS.",
   "license": "MIT",
@@ -12,27 +12,26 @@
     "dist"
   ],
   "scripts": {
+    "start": "npm run build -- -w",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
+    "clean": "del-cli dist",
     "create-spec": "babel-node test/helpers/createSpec.js",
+    "lint": "eslint --cache src test",
     "pretest": "npm run create-spec",
     "test": "jest",
     "posttest": "npm run lint",
-    "travis:test": "npm run test -- --runInBand",
-    "appveyor:test": "npm run test",
-    "lint": "eslint --cache src test",
-    "webpack-defaults": "webpack-defaults",
-    "start": "npm run build -- -w",
-    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
     "lint-staged": "lint-staged",
     "prebuild": "npm run clean",
     "prepare": "npm run build",
     "release": "standard-version",
     "security": "nsp check",
-    "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "travis:lint": "npm run lint && npm run security",
+    "travis:test": "npm run test -- --runInBand",
     "pretravis:coverage": "npm run pretest",
     "travis:coverage": "npm run test:coverage -- --runInBand",
-    "travis:lint": "npm run lint && npm run security",
-    "clean": "del-cli dist"
+    "appveyor:test": "npm run test",
+    "defaults": "webpack-defaults"
   },
   "dependencies": {
     "clone": "^2.1.1",
@@ -58,7 +57,6 @@
     "jest": "^21.2.1",
     "less": "^3.0.1",
     "lint-staged": "^3.4.0",
-    "nodemon": "^1.11.0",
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
