ci(test): try different approach for pretest

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "scripts": {
     "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
+    "build:fixtures": "babel-node test/helpers/createSpec.js",
     "clean": "del-cli dist",
     "commitlint": "commitlint",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint --cache src test",
-    "pretest": "babel-node test/helpers/createSpec.js",
     "ci:lint:commits": "commitlint --from=${CIRCLE_BRANCH} --to=${CIRCLE_SHA1}",
     "lint-staged": "lint-staged",
     "prebuild": "npm run clean",
@@ -28,7 +28,7 @@
     "release:ci": "conventional-github-releaser -p angular",
     "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
     "security": "nsp check",
-    "test": "jest --env=node",
+    "test": "npm run build:fixtures && jest --env=node",
     "test:watch": "jest --watch",
     "test:coverage": "jest --env=node --collectCoverageFrom='src/**/*.js' --coverage",
     "ci:lint": "npm run lint && npm run security",
