--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "security": "nsp check",
     "test": "npm run build:fixtures && jest --env=node",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --env=node --collectCoverageFrom='src/**/*.js' --coverage",
+    "test:coverage": "npm run build:fixtures && jest --env=node --collectCoverageFrom='src/**/*.js' --coverage",
     "ci:lint": "npm run lint && npm run security",
     "ci:test": "npm run test -- --runInBand",
     "ci:coverage": "npm run test:coverage -- --runInBand",
