--- a/package.json
+++ b/package.json
@@ -1,71 +1,87 @@
 {
   "name": "less-loader",
   "version": "4.1.0",
-  "author": "Johannes Ewald @jhnns",
-  "description": "Less loader for webpack. Compiles Less to CSS.",
+  "description": "A Less loader for webpack. Compiles Less to CSS.",
   "license": "MIT",
-  "engines": {
-    "node": ">= 4.8 < 5.0.0 || >= 5.10"
-  },
+  "repository": "webpack-contrib/less-loader",
+  "author": "Johannes Ewald @jhnns",
+  "homepage": "https://github.com/webpack-contrib/less-loader",
+  "bugs": "https://github.com/webpack-contrib/less-loader/issues",
+  "bin": "",
   "main": "dist/cjs.js",
-  "files": [
-    "dist"
-  ],
+  "engines": {
+    "node": ">= 6.9.0 <7.0.0 || >= 8.9.0"
+  },
   "scripts": {
     "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
+    "build:fixtures": "babel-node test/helpers/createSpec.js",
     "clean": "del-cli dist",
-    "create-spec": "babel-node test/helpers/createSpec.js",
+    "commitlint": "commitlint",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint --cache src test",
-    "pretest": "npm run create-spec",
-    "test": "jest",
-    "posttest": "npm run lint",
+    "ci:lint:commits": "commitlint --from=${CIRCLE_BRANCH} --to=${CIRCLE_SHA1}",
     "lint-staged": "lint-staged",
     "prebuild": "npm run clean",
-    "prepare": "npm run build",
+    "prepublish": "npm run build",
     "release": "standard-version",
+    "release:ci": "conventional-github-releaser -p angular",
+    "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
     "security": "nsp check",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:lint": "npm run lint && npm run security",
-    "travis:test": "npm run test -- --runInBand",
-    "pretravis:coverage": "npm run pretest",
-    "travis:coverage": "npm run test:coverage -- --runInBand",
-    "appveyor:test": "npm run test",
+    "test": "npm run build:fixtures && jest --env=node",
+    "test:watch": "jest --watch",
+    "test:coverage": "npm run build:fixtures && jest --env=node --collectCoverageFrom='src/**/*.js' --coverage",
+    "ci:lint": "npm run lint && npm run security",
+    "ci:test": "npm run test -- --runInBand",
+    "ci:coverage": "npm run test:coverage -- --runInBand",
     "defaults": "webpack-defaults"
   },
-  "dependencies": {
-    "clone": "^2.1.1",
-    "loader-utils": "^1.1.0",
-    "pify": "^3.0.0"
-  },
+  "files": [
+    "dist"
+  ],
   "peerDependencies": {
     "less": "^2.3.1 || ^3.0.0",
     "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"
   },
+  "dependencies": {
+    "@webpack-contrib/schema-utils": "^1.0.0-beta.0",
+    "clone": "^2.1.1",
+    "loader-utils": "^1.1.0",
+    "pify": "^3.0.0"
+  },
   "devDependencies": {
+    "@commitlint/cli": "^6.1.3",
+    "@commitlint/config-conventional": "^6.1.3",
+    "@webpack-contrib/eslint-config-webpack": "^2.0.4",
     "babel-cli": "^6.24.0",
-    "babel-jest": "^21.2.0",
+    "babel-jest": "^22.4.3",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "cross-env": "^3.2.4",
-    "del-cli": "^0.2.1",
-    "eslint": "^3.18.0",
+    "conventional-github-releaser": "^2.0.2",
+    "cross-env": "^5.1.4",
+    "del": "^3.0.0",
+    "del-cli": "^1.1.0",
+    "eslint": "^4.19.1",
     "eslint-config-webpack": "^1.2.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "husky": "^0.14.3",
     "inspect-loader": "^1.0.0",
-    "jest": "^21.2.1",
+    "jest": "^22.4.3",
     "less": "^3.0.1",
-    "lint-staged": "^3.4.0",
-    "nsp": "^2.6.3",
+    "lint-staged": "^7.0.4",
+    "memory-fs": "^0.4.1",
+    "nsp": "^3.2.1",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.11.1",
     "standard-version": "^4.0.0",
-    "webpack": "^3.0.0",
-    "webpack-defaults": "^1.6.0"
+    "webpack": "^4.5.0",
+    "webpack-defaults": "^2.3.0"
   },
-  "repository": "https://github.com/webpack-contrib/less-loader.git",
-  "bugs": "https://github.com/webpack-contrib/less-loader/issues",
-  "homepage": "https://github.com/webpack-contrib/less-loader",
+  "keywords": [
+    "webpack"
+  ],
   "pre-commit": "lint-staged",
   "lint-staged": {
     "*.js": [
