chore(na): replace nsp with npm audit

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "release": "standard-version",
     "release:ci": "conventional-github-releaser -p angular",
     "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
-    "security": "nsp check",
+    "security": "npm audit",
     "test": "npm run build:fixtures && jest --env=node",
     "test:watch": "jest --watch",
     "test:coverage": "npm run build:fixtures && jest --env=node --collectCoverageFrom='src/**/*.js' --coverage",
@@ -69,10 +69,9 @@
     "husky": "^0.14.3",
     "inspect-loader": "^1.0.0",
     "jest": "^22.4.3",
-    "less": "^3.0.1",
+    "less": "^3.9.0",
     "lint-staged": "^7.0.4",
     "memory-fs": "^0.4.1",
-    "nsp": "^3.2.1",
     "pre-commit": "^1.2.2",
     "prettier": "^1.11.1",
     "standard-version": "^4.0.0",
