--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "bin": "",
   "main": "dist/cjs.js",
   "engines": {
-    "node": ">= 6.9.0 <7.0.0 || >= 8.9.0"
+    "node": ">= 6.9.0"
   },
   "scripts": {
     "start": "npm run build -- -w",
@@ -41,7 +41,7 @@
   ],
   "peerDependencies": {
     "less": "^2.3.1 || ^3.0.0",
-    "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"
+    "webpack": "^4.0.0"
   },
   "dependencies": {
     "@webpack-contrib/schema-utils": "^1.0.0-beta.0",
