--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
-    "build:fixtures": "babel-node test/helpers/createSpec.js",
+    "build:fixtures": "babel test/helpers/createSpec.js",
     "clean": "del-cli dist",
     "commitlint": "commitlint",
     "commitmsg": "commitlint -e $GIT_PARAMS",
@@ -24,8 +24,8 @@
     "release": "standard-version",
     "security": "npm audit",
     "test": "npm run build:fixtures && jest --env=node",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --collectCoverageFrom='src/**/*.js' --coverage",
     "ci:lint": "npm run lint && npm run security",
     "ci:test": "npm run test -- --runInBand",
     "ci:coverage": "npm run test:coverage -- --runInBand",
@@ -40,10 +40,10 @@
     "webpack": "^4.0.0"
   },
   "dependencies": {
-    "@webpack-contrib/schema-utils": "^1.0.0-beta.0",
     "clone": "^2.1.1",
     "loader-utils": "^1.1.0",
-    "pify": "^3.0.0"
+    "pify": "^3.0.0",
+    "schema-utils": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -67,7 +67,7 @@
     "husky": "^0.14.3",
     "inspect-loader": "^1.0.0",
     "jest": "^23.6.0",
-    "less": "^3.9.0",
+    "less": "3.0.1",
     "lint-staged": "^7.0.4",
     "memory-fs": "^0.4.1",
     "pre-commit": "^1.2.2",
