--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
-    "build:fixtures": "babel test/helpers/createSpec.js",
+    "build:fixtures": "babel-node test/helpers/createSpec.js",
     "clean": "del-cli dist",
     "commitlint": "commitlint",
     "commitmsg": "commitlint -e $GIT_PARAMS",
@@ -23,7 +23,7 @@
     "prepublish": "npm run build",
     "release": "standard-version",
     "security": "npm audit",
-    "test": "npm run build:fixtures && jest --env=node",
+    "test": "npm run build:fixtures && jest",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --collectCoverageFrom='src/**/*.js' --coverage",
     "ci:lint": "npm run lint && npm run security",
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@commitlint/cli": "^6.1.3",
