--- a/package.json
+++ b/package.json
@@ -9,27 +9,24 @@
   "bugs": "https://github.com/webpack-contrib/less-loader/issues",
   "main": "dist/cjs.js",
   "engines": {
-    "node": ">= 6.9.0"
+    "node": ">= 4.8.0"
   },
   "scripts": {
     "start": "npm run build -- -w",
+    "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
     "build:fixtures": "babel-node test/helpers/createSpec.js",
     "clean": "del-cli dist",
-    "commitlint": "commitlint",
-    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "commitlint": "commitlint --from=master",
     "lint": "eslint --cache src test",
-    "prebuild": "npm run clean",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "release": "standard-version",
     "security": "npm audit",
-    "test": "npm run build:fixtures && jest",
-    "test:watch": "npm run test -- --watch",
-    "test:coverage": "npm run test -- --collectCoverageFrom='src/**/*.js' --coverage",
-    "ci:lint": "npm run lint && npm run security",
-    "ci:test": "npm run test -- --runInBand",
-    "ci:coverage": "npm run test:coverage -- --runInBand",
-    "ci:lint:commits": "commitlint --from=origin/master --to=${CIRCLE_SHA1}",
+    "test:only": "cross-env NODE_ENV=test npm run build:fixtures && jest",
+    "test:watch": "cross-env NODE_ENV=test npm run build:fixtures && jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test npm run build:fixtures && jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "pretest": "npm run lint",
+    "test": "cross-env NODE_ENV=test npm run test:coverage",
     "defaults": "webpack-defaults"
   },
   "files": [
@@ -37,75 +34,42 @@
   ],
   "peerDependencies": {
     "less": "^2.3.1 || ^3.0.0",
-    "webpack": "^4.0.0"
+    "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"
   },
   "dependencies": {
     "clone": "^2.1.1",
     "loader-utils": "^1.1.0",
-    "pify": "^3.0.0",
-    "schema-utils": "^1.0.0"
+    "pify": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
-    "@commitlint/cli": "^6.1.3",
-    "@commitlint/config-conventional": "^6.1.3",
-    "@webpack-contrib/defaults": "^3.0.5",
-    "@webpack-contrib/eslint-config-webpack": "^2.0.4",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.5.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "cross-env": "^5.1.4",
-    "del": "^3.0.0",
+    "@babel/preset-env": "^7.4.4",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "@webpack-contrib/defaults": "^4.0.1",
+    "@webpack-contrib/eslint-config-webpack": "^3.0.0",
+    "babel-jest": "^24.7.1",
+    "commitlint-azure-pipelines-cli": "^1.0.1",
+    "cross-env": "^5.2.0",
+    "del": "^4.1.1",
     "del-cli": "^1.1.0",
-    "eslint": "^4.19.1",
-    "eslint-config-webpack": "^1.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "husky": "^0.14.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^2.1.0",
     "inspect-loader": "^1.0.0",
-    "jest": "^24.5.0",
-    "less": "^3.0.1",
-    "lint-staged": "^7.0.4",
+    "jest": "^24.7.1",
+    "jest-junit": "^6.3.0",
+    "less": "^3.9.0",
+    "lint-staged": "^8.1.5",
     "memory-fs": "^0.4.1",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.11.1",
-    "standard-version": "^4.0.0",
-    "webpack": "^4.5.0"
+    "prettier": "^1.17.0",
+    "standard-version": "^5.0.2",
+    "webpack": "^4.30.0"
   },
   "keywords": [
     "webpack"
-  ],
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "6.9.0"
-          },
-          "useBuiltIns": "usage"
-        }
-      ]
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  }
+  ]
 }
