--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "clone": "^2.1.1",
     "loader-utils": "^1.1.0",
-    "pify": "^3.0.0"
+    "pify": "^4.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -70,6 +70,12 @@
     "webpack": "^4.30.0"
   },
   "keywords": [
-    "webpack"
+    "webpack",
+    "loader",
+    "less",
+    "lesscss",
+    "less.js",
+    "css",
+    "preprocessor"
   ]
 }
