--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "dependencies": {
     "clone": "^2.1.1",
     "loader-utils": "^1.1.0",
-    "pify": "^4.0.1"
+    "pify": "^4.0.1",
+    "schema-utils": "^2.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
