--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   ],
   "peerDependencies": {
     "less": "^2.3.1 || ^3.0.0",
-    "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0"
+    "webpack": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
     "clone": "^2.1.1",
