--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "dist"
   ],
   "peerDependencies": {
-    "less": "^2.3.1 || ^3.0.0",
+    "less": "^3.0.0",
     "webpack": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
