--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "standard-version": "^7.0.1",
+    "strip-ansi": "^6.0.0",
     "webpack": "^4.42.1"
   },
   "keywords": [
