chore(deps): update

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clean": "del-cli dist",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production babel src -d dist --copy-files",
-    "build:fixtures": "babel-node test/helpers/createSpec.js",
+    "build:fixtures": "node test/helpers/createSpec.js",
     "commitlint": "commitlint --from=master",
     "security": "npm audit",
     "lint:prettier": "prettier --list-different .",
@@ -66,7 +66,6 @@
     "husky": "^4.2.5",
     "inspect-loader": "^1.0.0",
     "jest": "^25.4.0",
-    "jest-junit": "^10.0.0",
     "lint-staged": "^10.1.6",
     "memfs": "^3.1.2",
     "npm-run-all": "^4.1.5",
