chore(deps): update

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "clean": "del-cli dist",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production babel src -d dist --copy-files",
-    "build:fixtures": "node test/helpers/createSpec.js",
     "commitlint": "commitlint --from=master",
     "security": "npm audit",
     "lint:prettier": "prettier --list-different .",
     "lint:js": "eslint --cache .",
     "lint": "npm-run-all -l -p \"lint:**\"",
-    "test:only": "cross-env NODE_ENV=test npm run build:fixtures && jest",
+    "test:build": "node test/helpers/createSpec.js",
+    "test:only": "cross-env NODE_ENV=test npm run test:build && cross-env NODE_ENV=test jest",
     "test:watch": "npm run test:only -- --watch",
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
     "pretest": "npm run lint",
