--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ yarn-debug.log*
 /local
 /reports
 /test/fixtures/css
+/test/fixtures/generated-1.less
+/test/fixtures/generated-2.less
 /test/output
 .DS_Store
 Thumbs.db
