--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "webpack": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
-    "clone": "^2.1.2",
+    "klona": "^1.1.1",
     "less": "^3.11.3",
     "loader-utils": "^2.0.0",
     "schema-utils": "^2.7.0"
