--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   ],
   "peerDependencies": {
     "less": "^3.5.0 || ^4.0.0",
-    "webpack": "^4.0.0 || ^5.0.0"
+    "webpack": "^5.0.0"
   },
   "dependencies": {
     "klona": "^2.0.4",
